--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,11 @@
 {
     "version": 2,
     "builds": [
-      { "src": "./index.js", "use": "@vercel/node" }
+      { "src": "index.js", "use": "@vercel/node" }
     ],
     "routes": [
-      { "src": "/(.*)", "dest": "/" }
-    ]
+      { "src": "/(.*)", "dest": "index.js" }
+    ],
+    "rewrites":[{"source": "./(.*)", "destination":"index.js"}]
   }
   
